--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  contents: write # Esto es clave si el paso de despliegue hace push
-      pull-requests: write # Añadir si el despliegue actualiza PRs, etc.
+  contents: write
+  pull-requests: write
   pages: write
   id-token: write
  
